--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,9 +1,18 @@
 # Authors
 
 Name Name:
-  name        : "Odyssefs Diamantopoulos Pantaleon"
+  name        : "Name Name"
   uri         : "http://name.com"
-  email       : "o.diamantopoulospantaleon@gmail.com"
+  email       : "name@name.com"
   bio         : "This is the first name."
-  avatar      : "avatar.jpg"
-  twitter     : "gody10"
+  avatar      : "bio-photo-2.jpg"
+  twitter     : "name"
+  google_plus : "Name"
+
+Name2 Name2:
+  name        : "Name2 Name2"
+  email       : "name2@name2.com"
+  bio         : "I ordered what?"
+  avatar      : "bio-photo.jpg"
+  twitter     : "name2"
+  google_plus : "Name"
