--- a/_config.yml
+++ b/_config.yml
@@ -57,9 +57,9 @@ author:
   goodreads        : # Username
   google_plus      : # Username
   keybase          : # Username
-  instagram        : "gody10"
+  instagram        : "gody_odysseas"
   lastfm           : # Username
-  linkedin         : "Odyssefs Diamantopoulos Pantaleon"
+  linkedin         : "odyssefs-diamantopoulos"
   mastodon         : # URL
   medium           : # URL
   pinterest        : # Username
@@ -67,7 +67,7 @@ author:
   steam            : # Username
   telegram         : # URL
   tumblr           : # Username
-  twitter          : "gody10"
+  twitter          : "FappaKappa"
   vine             : # Username
   weibo            : # Username
   wikipedia        : # Username
