--- a/_config.yml
+++ b/_config.yml
@@ -25,10 +25,7 @@ author:
   avatar           : "avatar.jpg"
   name             : "Odyssefs Diamantopoulos Pantaleon"
   pronouns         : # example: "she/her"  
-  bio              : "My research interests are focused on leveraging AI to solve real-life problems. I believe the future will be shaped by intelligent agents, foundly transforming society—from everyday jobs to the education system. I have extensive experience
-                      with problem modeling and solving, leveraging Optimization techniques, Game Theory and Reinforcement learning. I also
-                      have hands-on experience with Large Language Models, Transformer architectures, embedding models such as BERT, and
-                      computer vision models, which I’ve applied to solve problems in natural language processing and image analysis."
+  bio              : "Interests: Reinforcement learning, Machine learning, Robotics, Computer Vision, Artificial Intelligence, Philosophy"
   location         : "Tempe/AZ"
   employer         : "Arizona State University"
   uri              : # URL
