--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 # Basic Site Settings
 locale                   : "en-US"
 site_theme               : "default"
-title                    : "Odyssefs Diamantopoulos Pantaleon"
+title                    : "Home Page"
 title_separator          : "-"
 name                     : &name "Odyssefs Diamantopoulos Pantaleon"
 description              : &description "personal description"
