--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ author:
   name             : "Odyssefs Diamantopoulos Pantaleon"
   pronouns         : # example: "she/her"  
   bio              : "Interests: Reinforcement learning, Machine learning, Robotics, Computer Vision, Artificial Intelligence, Philosophy"
-  location         : "Tempe/AZ"
+  location         : "Tempe/Arizona/USA"
   employer         : "Arizona State University"
   uri              : # URL
   email            : "odiamantopoulospantaleon@gmail.edu" 
