--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,17 +5,12 @@
 # prevent it from being included in the site.
 
 main:
-  - title: "CV"
-    url: /cv/
 
   - title: "Publications"
     url: /publications/
 
-  # - title: "Guide"
-  #   url: /markdown/
-
-  - title: "Talks"
-    url: /talks/    
+  # - title: "Talks"
+  #   url: /talks/    
 
   # - title: "Teaching"
   #   url: /teaching/    
@@ -25,4 +20,10 @@ main:
         
   # - title: "Blog Posts"
   #   url: /year-archive/
+
+  - title: "CV"
+    url: /cv/
+
+  # - title: "Guide"
+  #   url: /markdown/
     
