--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,8 @@ author:
   location         : "Tempe/Arizona/USA"
   employer         : "Arizona State University"
   uri              : # URL
-  email            : "o.diamantopoulospantaleon@gmail.com" 
+  email            : "o.diamantopoulospantaleon@gmail.com"
+  nationality      : "Greek"
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
