--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
   avatar           : "ody_photo.jpg"
   name             : "Odyssefs Diamantopoulos Pantaleon"
   pronouns         : # example: "she/her"  
-  bio              : "Interests: Reinforcement learning, Machine learning, Robotics, Computer Vision, Artificial Intelligence, Philosophy"
+  bio              : "Born and raised in Greece, with BSc and MSc in Computer Science and a Minor in Philosophy"
   location         : "Tempe/Arizona/USA"
   employer         : "Arizona State University"
   uri              : # URL
