--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
   avatar           : "ody_photo.jpg"
   name             : "Odyssefs Diamantopoulos Pantaleon"
   pronouns         : # example: "she/her"  
-  bio              : "Born and raised in Greece, with BSc and MSc in Computer Science and a Minor in Philosophy"
+  bio              : "Born and raised in Greece originating from the island of Paros! I have a BSc and a MSc in Computer Science, with specialization in Deep ML and Deep RL and a Minor in Philosophy"
   location         : "Tempe/Arizona/USA"
   employer         : "Arizona State University"
   uri              : # URL
