--- a/_config.yml
+++ b/_config.yml
@@ -26,8 +26,8 @@ author:
   name             : "Odyssefs Diamantopoulos Pantaleon"
   pronouns         : # example: "she/her"  
   bio              : "Born and raised in Greece originating from the island of Paros! I have a BSc and a MSc in Computer Science, with specialization in Deep ML and Deep RL and a Minor in Philosophy"
-  location         : "Tempe/Arizona/USA"
-  employer         : "Arizona State University"
+  location         : "Athens/Greece"
+  employer         : "University of Edinburgh"
   uri              : # URL
   email            : "o.diamantopoulospantaleon@gmail.com"
 
