--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ author:
   pronouns         : # example: "she/her"  
   bio              : "PhD Student at the University of Edinburgh researching Causal AI in Medical Imaging. Born and raised in Greece, from the island of Paros."
   location         : "Edinburgh, UK"
-  employer         : "University of Edinburgh"
+  employer         : "Edinburgh University"
   uri              : # URL
   email            : "o.diamantopoulospantaleon@gmail.com"
 
